removed custom scrollbar bc of issues on mobile

--- a/css/index.sass
+++ b/css/index.sass
@@ -377,20 +377,20 @@ $icon-size: min(10vw, 200px)
 
 /* ==================== */
 /* 📜 CUSTOM SCROLLBAR */
-@media screen and (min-width: 768px)
-  ::-webkit-scrollbar // Width
-    width: 12px
+// @media screen and (min-width: 768px)
+//   ::-webkit-scrollbar // Width
+//     width: 12px
 
-  ::-webkit-scrollbar-track // Track
-    background: #70904130
-    // background: none
+//   ::-webkit-scrollbar-track // Track
+//     background: #70904130
+//     // background: none
 
-  ::-webkit-scrollbar-thumb // Handle
-    background: #31572C
-    border-radius: 6px
+//   ::-webkit-scrollbar-thumb // Handle
+//     background: #31572C
+//     border-radius: 6px
 
-  ::-webkit-scrollbar-thumb:hover // Handle:hover
-    background: #224120
+//   ::-webkit-scrollbar-thumb:hover // Handle:hover
+//     background: #224120
 /* END CUSTOM SCROLLBAR */
 /* ==================== */
 
